...
                      left: 24.0,
                      top: 16.0,
                      right: 24.0,
                      bottom: 8.0,
                    ),
                    child: Text(
                      'Kalendarz',
                      style: Theme.of(context).textTheme.headlineSmall
                          ?.copyWith(
                            fontWeight: FontWeight.w700,
                            color: AppColors.onSurface,
                          ),
                    ),
...
                  color: AppColors.accent,
                  size: 20,
                ),
              ),
              SizedBox(width: 12),
              Text(
                'Ogłoszenia w wybranym dniu',
                style: Theme.of(context).textTheme.titleLarge?.copyWith(
                  fontWeight: FontWeight.w600,
                  color: AppColors.onSurface,
                ),
              ),
            ],
...
