...
        serviceNames: ['Masaż leczniczy'],
        appointmentStatus: 'confirmed',
        scheduledStart: DateTime.now().add(const Duration(days: 1)),
        scheduledEnd: DateTime.now().add(const Duration(days: 1, hours: 1)),
        createdAt: DateTime.now(),
        updatedAt: DateTime.now(),
        clientAddress: 'Warszawa, Złota 44',
        totalPrice: 150.0,
      ),
      Appointment(
        id: '2',
        clientId: 'client_1',
        specialistId: '2',
...
